First commit of changes to TeX file
Added an extra line to the TeX file to make sure commits are working out nicely

--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -1,5 +1,5 @@
 \documentclass{report}
 
 \begin{document}
-	Hello world! This is a test
+	Hello world! This is a test. If I change something here now, does that properly work?
 \end{document}
