Added chapters and sections
Adding chapters and sections to the final document in order to have some sort of a structure already

--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -1,5 +1,19 @@
 \documentclass{report}
+\usepackage{blindtext}
+
+\title{Research proposal}
+\author{Ludo Mathijs Diender}
+\date{\today}
+
 
 \begin{document}
+	\maketitle
+	\chapter{Introduction}
+
 	Hello world! This is a test. If I change something here now, does that properly work?
+	\section{Current research}
+	There is a lot of current research already done
+	
+	\chapter{Materials and Methods}
+	And some more text here in the second section.
 \end{document}
