--- a/Proposal_Ludo.bib
+++ b/Proposal_Ludo.bib
@@ -37,7 +37,7 @@
    type = {Journal Article}
 }
 
-@article{de Vos2019,
+@article{deVos2019,
    author = {de Vos, L. W. and Overeem, A. and Leijnse, H. and Uijlenhoet, R.},
    title = {Rainfall Estimation Accuracy of a Nationwide Instantaneously Sampling Commercial Microwave Link Network: Error Dependency on Known Characteristics},
    journal = {Journal of Atmospheric and Oceanic Technology},
@@ -108,8 +108,7 @@ Year,
    type = {Journal Article}
 }
 
-@article{RiosGaona
-2017,
+@article{RiosGaona2017,
    author = {Gaona, M. F. Rios and Overeem, A. and Brasjen, A. M. and Meirink, J. F. and Leijnse, H. and Uijlenhoet, R.},
    title = {Evaluation of Rainfall Products Derived From Satellites and Microwave Links for The Netherlands},
    journal = {IEEE Transactions on Geoscience and Remote Sensing},
@@ -122,8 +121,7 @@ Year,
    type = {Journal Article}
 }
 
-@article{RiosGaona
-2017,
+@article{RiosGaona2017,
    author = {Gaona, M.F.R. and Overeem, A. and Raupach, T.H. and Leijnse, H. and Uijlenhoet, R.},
    title = {Rainfall retrieval with commercial microwave links in Sao Paulo, Brazil},
    journal = {Atmos. Meas. Tech. },
@@ -182,8 +180,7 @@ Year,
    type = {Journal Article}
 }
 
-@inproceedings{Jacoby
-Year,
+@inproceedings{JacobyYear,
    author = {Jacoby, D. and Ostrometzky, J. and Messer, H.},
    title = {Short-Term Prediction of the Attenuation in a Commercial Microwave Link Using LSTM-based RNN},
    booktitle = {2020 28th European Signal Processing Conference (EUSIPCO)},
@@ -191,6 +188,21 @@ Year,
    ISBN = {2076-1465},
    DOI = {10.23919/Eusipco47968.2020.9287835},
    type = {Conference Proceedings}
+}
+
+@article{Leijnse2007,
+   author = {Leijnse, H. and Uijlenhoet, R. and Stricker, J. N. M.},
+   title = {Hydrometeorological application of a microwave link: 2. Precipitation},
+   journal = {Water Resources Research},
+   volume = {43},
+   number = {4},
+   abstract = {The suitability of a 27-GHz microwave link for measuring path-averaged precipitation is investigated. Theoretical analyses show that the specific attenuation of an electromagnetic signal at this frequency varies nearly linearly with the rainfall intensity, which is ideal for line-integrating instruments. The dependence of this relation on the drop size distribution and on the temperature is small, so that uncertainties in these variables do not play large roles in the estimation of rainfall intensity. Data from an experiment with a 4.89-km microwave link and a line configuration of seven tipping bucket rain gauges are used to test whether this instrument is indeed suitable for the estimation of path-averaged rainfall. Results from this experiment show that the attenuation due to wet antennas can have a significant effect on the retrieved rainfall intensity. However, when a two-parameter wet antenna correction function is applied to the link data, comparisons with the rain gauge data show that the instrument is indeed well suited for the measurement of path-averaged rainfall.},
+   ISSN = {0043-1397},
+   DOI = {https://doi.org/10.1029/2006WR004989},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2006WR004989
+https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1029/2006WR004989?download=true},
+   year = {2007},
+   type = {Journal Article}
 }
 
 @article{Leijnse2008,
