--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -49,16 +49,14 @@
 	\section{Problem description}
 	
 	\textbf{In short, without references yet.}
-	Since the start of this century, Commercial Microwave Links have been recognized as an opportunistic method to measure rainfall \cite{Leijnse2007}. The links span around 10 kms on average with a frequency of 30 GHz and their signal gets attenuated by rainfall. This attenuation is measured and stored by telecompanies and can be used to retrieve rainfall rates. Especially in data scarce areas, where little precipitation is measured, CML's have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}. Having ample and correct precipitation data is important for flood warnings, agriculture, river systems, shipping routes and many more.
-	The first studies on the use of CML signals to retrieve rainfall rates where done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has shown correlations of well over 95\% in most cases. (ample of references) Recent methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different kinds. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. In general, the time needed for the algorithm, the ease of implementing and the transferability of the methods are mentioned as main advantages of data-drive neural networks in comparison to the traditional PL method. 
-	Transfer learning carries the power to adapt an already existing model with a certain structure to do a slightly different task.   Although used quite often in different Machine Learning applications, the concept of transfer learning has not yet been used to improve the precipitation estimation of CML's in data-scarce areas.  
+	In the past 25 years, Commercial Microwave Links (CML) have been recognized as a valuable opportunistic method to measure rainfall \cite{Leijnse2007} \cite{Ruf1996}. The links' signals get attenuated by rainfall by means of scattering and absorption. This attenuation is measured and stored by telecompanies and can be used to retrieve rainfall rates. Especially in data scarce areas, where little precipitation is measured, CML's have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}. Their density in populated areas makes them especially useful for urban hydrology where high spatial and temporal resolution of precipitation data is required \cite{Overeem2011}. In general, having ample and correct precipitation data is important for flood warnings, agriculture, river systems, shipping routes and many more \cite{Chwala2019}. 
 	
-	In this Section, you should:
-	\begin{itemize}
-		\item Motivate and justify the research. Put your research in global context (who cares about your research?)
-		\item State what has been done already. Summarize relevant literature \cite{Overeem2011}.
-		\item State what has NOT been done yet. Where is the gap in knowledge? This should lead directly to the research objectives in the next Section.
-	\end{itemize}
+	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recent methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different kinds. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. In general, the time needed for the algorithm, the ease of implementing and the transferability of the methods are mentioned as main advantages of data-drive neural networks in comparison to the traditional PL method. 
+	
+	One of the disadvantages of using data-driven methods like neural networks, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a sligthly different task \cite{TanYear}. The technique exploits the availability of data in the source domain and is able to transfer the knowledge to the target domain. It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. Although used quite often in different Machine Learning applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML's in data-scarce areas. 
+	
+	Part on the use of Sri Lanka and Netherlands? Part on NN?
+
 	
 	\section{Research objectives}
 	
@@ -82,10 +80,11 @@
 	Making use of Aart's dataset of the Netherlands and the provided data for Sri Lanka. Combination makes the research come together. \textbf{To what extent do I need to explain the data here? Frequency, number, type of measurements (interval or continuous, min/max or 1 min), time period (probably yes), metadata like average height and frequency.}
 	
 	\section{Methods}
+	Explain neural networks shortly.
+	Neural networks are part of deep learning. An input signal is transfered through different layers of the model. Every layer consists of different neurons that are able to extract features from the input signal. The subsequent layers extract combinations out of the previous layer, until finally the network ends up with a prediction with a certain probability. By applying a loss function, the network can learn how to improve, by changing the different parameters in all neurons. As a part of Machine Learning, the to-be-extracted features are unknown beforehand to the researcher. The network itself learns which features are interesting, seperable and help in classifying the specific signal. 
 	
-	To answer my research questions, I will use a neural network set up to infer rainfall rates from CML data. Picking the type of neural network will be part of the research as well, as there is a plethora of different architectures available, all of which serve specific purposes. 
+	To answer my research questions, I will use a neural network set up to infer rainfall rates from CML data. Picking the type of neural network will be part of the research as well, as there is a plethora of different architectures available, all of which serve specific purposes. Pick RNN as proposed by Habi, specifically LSTM.
 	The main architectural types that will be considered are one-dimensional convolutional neural networks (CNN), Long Short Term Memory (LSTM) and Gated Recurrent Unit (GRU). The final two are both different types of Recurrent Neural Networks. 
-	How are you going to find the answer to your questions? What do you need for this? Describe the core measurement equipment or models briefly. It often helps to link the steps in the methodology to the research questions.
 	
 	
 	\section{Timetable}
