--- a/Proposal_Ludo.bib
+++ b/Proposal_Ludo.bib
@@ -17,7 +17,8 @@
    note = {AMT},
    ISSN = {1867-8548},
    DOI = {10.5194/amt-9-991-2016},
-   url = {https://amt.copernicus.org/articles/9/991/2016/},
+   url = {https://amt.copernicus.org/articles/9/991/2016/
+},
    year = {2016},
    type = {Journal Article}
 }
@@ -32,7 +33,7 @@
    abstract = {Accurate observation of the high spatio-temporal variability of rainfall is crucial for hydrometeorological applications. However, the existing observations from rain gauges and weather radars have individual shortcomings that can introduce considerable errors and uncertainties. A fairly new technique to get additional rainfall information is the usage of the country-wide commercial microwave link (CML) networks for rainfall estimation by exploiting the measurements of rain-induced attenuation along these CMLs. This technique has seen an increasing number of applications during the last years. Different methods have been developed to process the noisy raw data and to derive rainfall fields. It has been shown that CMLs can provide important line-integrated rainfall information that complements pointwise rain gauge and spatial radar observations. There exist several limitations, though. Robustly dealing with the erratic fluctuations of the CML raw data is a challenge, in particular with the growing number of CMLs. How to correctly compensate for the biases from the effect of wet antenna attenuation for different CMLs also remains a crucial research question. Progress is additionally hampered by the lack of method intercomparisons, which in turn is hampered by restricted data sharing. Hence, collaboration is key for further advancements, also with regard to extended interaction with the CML network operators, which is a prerequisite to achieve increased data availability. In regions where rain gauges and weather radars are available, CMLs are a welcome complement. But in developing countries, which are characterized by weak technical infrastructure and which often suffer from water stress, additional rainfall information is a necessity. CMLs could play a crucial role in this respect. This article is categorized under: Science of Water > Hydrological Processes Science of Water > Water Extremes Science of Water > Methods},
    ISSN = {2049-1948},
    DOI = {https://doi.org/10.1002/wat2.1337},
-   url = {https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wat2.1337},
+   url = {https://wires.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/wat2.1337?download=true},
    year = {2019},
    type = {Journal Article}
 }
@@ -45,13 +46,13 @@
    number = {7},
    pages = {1267-1283},
    DOI = {10.1175/JTECH-D-18-0197.1},
-   url = {https://journals.ametsoc.org/view/journals/atot/36/7/jtech-d-18-0197.1.xml},
+   url = {https://journals.ametsoc.org/downloadpdf/journals/atot/36/7/jtech-d-18-0197.1.pdf},
    year = {2019},
    type = {Journal Article}
 }
 
 @article{Diba2021,
-   author = {Diba, F.D., Samad, M.A., Ghimire, J., D. Choi},
+   author = {Diba, F.D. and Samad, M.A. and Ghimire, J. and Choi, D.},
    title = {Wireless Telecommunication Links for Rainfall Monitoring: Deep Learning Approach and Experimental Results},
    journal = {IEEE},
    volume = {9},
@@ -77,19 +78,19 @@
    abstract = {Abstract Rainfall monitoring based on commercial terrestrial microwave links is tested for the first time in Burkina Faso, in Sahelian West Africa. In collaboration with one national cellular phone operator, Telecel Faso, the attenuation on a 29 km long microwave link operating at 7 GHz was monitored at 1 s time rate for the monsoon season 2012. The time series of attenuation is transformed into rain rates and compared with rain gauge data. The method is successful in quantifying rainfall: 95% of the rainy days are detected. The correlation with the daily rain gauge series is 0.8, and the season bias is 6%. The correlation at the 5 min time step within each event is also high. These results demonstrate the potential interest of exploiting national and regional wireless telecommunication networks for monitoring rainfall in Africa, where operational rain gauge networks are degrading and the hydrometeorological risk increasing.},
    ISSN = {0094-8276},
    DOI = {https://doi.org/10.1002/2014GL060724},
-   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2014GL060724},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/2014GL060724?download=true},
    year = {2014},
    type = {Journal Article}
 }
 
-@inproceedings{Engström
-Year,
+@inproceedings{EngströmYear,
    author = {Engström, O. and Tahvili, S. and Muhammad, A. and Yaghoubi, F. and Pellaco, L.},
    title = {Performance Analysis of Deep Anomaly Detection Algorithms for Commercial Microwave Link Attenuation},
    booktitle = {2020 International Conference on Advanced Computer Science and Information Systems (ICACSIS)},
    pages = {47-52},
    ISBN = {2330-4588},
    DOI = {10.1109/ICACSIS51025.2020.9263209},
+   url = {https://ieeexplore.ieee.org/document/9263209/},
    type = {Conference Proceedings}
 }
 
@@ -103,7 +104,7 @@ Year,
    note = {HESS},
    ISSN = {1607-7938},
    DOI = {10.5194/hess-21-617-2017},
-   url = {https://hess.copernicus.org/articles/21/617/2017/},
+   url = {https://hess.copernicus.org/articles/21/617/2017/hess-21-617-2017.pdf},
    year = {2017},
    type = {Journal Article}
 }
@@ -117,6 +118,7 @@ Year,
    pages = {6849-6859},
    ISSN = {1558-0644},
    DOI = {10.1109/TGRS.2017.2735439},
+   url = {https://ieeexplore.ieee.org/ielx7/36/8118236/08023853.pdf?tp=&arnumber=8023853&isnumber=8118236&ref=},
    year = {2017},
    type = {Journal Article}
 }
@@ -129,6 +131,7 @@ Year,
    number = {7},
    pages = {11},
    DOI = {10.5194/amt-11-4465-2018},
+   url = {https://amt.copernicus.org/articles/11/4465/2018/amt-11-4465-2018.pdf},
    year = {2017},
    type = {Journal Article}
 }
@@ -143,7 +146,7 @@ Year,
    note = {HESS},
    ISSN = {1607-7938},
    DOI = {10.5194/hess-24-2931-2020},
-   url = {https://hess.copernicus.org/articles/24/2931/2020/},
+   url = {https://hess.copernicus.org/articles/24/2931/2020/hess-24-2931-2020.pdf},
    year = {2020},
    type = {Journal Article}
 }
@@ -153,6 +156,7 @@ Year,
    title = {Uncertainties in Short Commercial Microwave Links Fading Due to Rain},
    pages = {9006-9010},
    DOI = {10.1109/ICASSP40776.2020.9053814},
+   url = {https://ieeexplore.ieee.org/document/9053814/},
    year = {2020},
    type = {Book}
 }
@@ -175,7 +179,7 @@ Year,
    abstract = {Abstract Accurate and timely precipitation forecasts are crucial for early warning. Rainfall nowcasting, the process of statistically extrapolating recent rainfall observations, is increasingly used for short-term forecasting. Nowcasts are generally constructed with high-resolution radar observations. As a proof of concept, we construct nowcasts with country-wide rainfall maps estimated from signal level data of commercial microwave links (CMLs) for 12 summer days in the Netherlands. CML nowcasts compare well to radar rainfall nowcasts. Provided well-calibrated CML rainfall estimates are employed, CML nowcasts can outperform unadjusted real-time radar nowcasts for high rainfall rates, which are underestimated as compared to a reference. Care should be taken with the sensitivity of the advection field derivation to areas with low CML coverage and the inherent measurement scale of CML data, which can be larger than the application scale. We see potential for rainfall nowcasting with CML data, for example, in regions where weather radars are absent.},
    ISSN = {0094-8276},
    DOI = {https://doi.org/10.1029/2020GL089365},
-   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020GL089365},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1029/2020GL089365?download=true},
    year = {2020},
    type = {Journal Article}
 }
@@ -187,6 +191,7 @@ Year,
    pages = {1628-1632},
    ISBN = {2076-1465},
    DOI = {10.23919/Eusipco47968.2020.9287835},
+   url = {https://ieeexplore.ieee.org/document/9287835/},
    type = {Conference Proceedings}
 }
 
@@ -199,8 +204,7 @@ Year,
    abstract = {The suitability of a 27-GHz microwave link for measuring path-averaged precipitation is investigated. Theoretical analyses show that the specific attenuation of an electromagnetic signal at this frequency varies nearly linearly with the rainfall intensity, which is ideal for line-integrating instruments. The dependence of this relation on the drop size distribution and on the temperature is small, so that uncertainties in these variables do not play large roles in the estimation of rainfall intensity. Data from an experiment with a 4.89-km microwave link and a line configuration of seven tipping bucket rain gauges are used to test whether this instrument is indeed suitable for the estimation of path-averaged rainfall. Results from this experiment show that the attenuation due to wet antennas can have a significant effect on the retrieved rainfall intensity. However, when a two-parameter wet antenna correction function is applied to the link data, comparisons with the rain gauge data show that the instrument is indeed well suited for the measurement of path-averaged rainfall.},
    ISSN = {0043-1397},
    DOI = {https://doi.org/10.1029/2006WR004989},
-   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2006WR004989
-https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1029/2006WR004989?download=true},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1029/2006WR004989?download=true},
    year = {2007},
    type = {Journal Article}
 }
@@ -245,6 +249,7 @@ Wet antennas},
    journal = {Environmental Research Letters},
    volume = {16},
    DOI = {10.1088/1748-9326/ac0fa6},
+   url = {https://iopscience.iop.org/article/10.1088/1748-9326/ac0fa6},
    year = {2021},
    type = {Journal Article}
 }
@@ -258,7 +263,7 @@ Wet antennas},
    abstract = {The estimation of rainfall using commercial microwave links is a new and promising measurement technique. Commercial link networks cover large parts of the land surface of the earth and have a high density, particularly in urban areas. Rainfall attenuates the electromagnetic signals transmitted between antennas within this network. This attenuation can be calculated from the difference between the received powers with and without rain and is a measure of the path-averaged rainfall intensity. This study uses a 17-day data set of, on average, 57 single-frequency links from 2009 to estimate rainfall in the Rotterdam region, a densely populated delta city in Netherlands (≈1250 km2, >1 million inhabitants). A methodology is proposed where nearby links are used to remove signal fluctuations that are not related to rainfall in order to be able to reliably identify wet and dry weather spells. Subsequently, received signal powers are converted to path-averaged rainfall intensities, taking into account the temporal sampling protocol and attenuation due to wet antennas. Link-based rainfall depths are compared with those based on gauge-adjusted radar data. In addition, the rainfall retrieval algorithm is applied to an independent data set of 21 rainy days in 2010 with on average 16 single-frequency links in the same region. Rainfall retrievals are compared against gauge-adjusted radar rainfall estimates over the link path. Moreover, the retrieval algorithm is also tested using high-resolution research link data to investigate the algorithm's sensitivity to temporal rainfall variations. All presented comparisons confirm the quality of commercial microwave link data for quantitative precipitation estimation over urban areas.},
    ISSN = {0043-1397},
    DOI = {https://doi.org/10.1029/2010WR010350},
-   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2010WR010350},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1029/2010WR010350?download=true},
    year = {2011},
    type = {Journal Article}
 }
@@ -287,7 +292,8 @@ Wet antennas},
    note = {AMT},
    ISSN = {1867-8548},
    DOI = {10.5194/amt-9-2425-2016},
-   url = {https://amt.copernicus.org/articles/9/2425/2016/},
+   url = {https://amt.copernicus.org/articles/9/2425/2016/
+https://amt.copernicus.org/articles/9/2425/2016/amt-9-2425-2016.pdf},
    year = {2016},
    type = {Journal Article}
 }
@@ -298,6 +304,7 @@ Wet antennas},
    journal = {Water Resources Research},
    volume = {52},
    DOI = {10.1002/2016WR019412},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/2016WR019412?download=true},
    year = {2016},
    type = {Journal Article}
 }
@@ -322,7 +329,7 @@ Wet antennas},
    abstract = {Abstract Commercial microwave links (CMLs) have proven useful for providing rainfall information close to the ground surface. However, large uncertainties are associated with these retrievals, partly due to challenges in the type of data collection and processing. In particular, the most common case is when only minimum and maximum received signal levels (RSLs) over a given time interval (hereafter 15 min) are stored by mobile network operators. The average attenuation and the corresponding rainfall rate are then calculated based on a weighted average method using the minimum and maximum attenuation. In this study, an alternative to using a constant weighted average method is explored, based on a machine learning model trained to produce actual attenuation from minimum/maximum values. A rainfall retrieval deep learning model was designed based on a long short-term memory (LSTM) model architecture and trained with disdrometer data in a form that is comparable to the data provided by mobile network operators. A first evaluation used only disdrometer data to mimic both attenuation from a CML and corresponding rainfall rates. For the test data set, the relative bias was reduced from 5.99% to 2.84% and the coefficient of determination (R2) increased from 0.86 to 0.97. The second evaluation used this disdrometer-trained LSTM to retrieve rainfall rates from an actual CML located nearby the disdrometer. A significant improvement in the overall rainfall estimation compared to existing microwave link attenuation models was observed. The relative bias reduced from 7.39% to −1.14% and the R2 improved from 0.71 to 0.82.},
    ISSN = {0043-1397},
    DOI = {https://doi.org/10.1029/2019WR026255},
-   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2019WR026255},
+   url = {https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019WR026255},
    year = {2020},
    type = {Journal Article}
 }
@@ -354,8 +361,21 @@ Microwave links},
    note = {AMT},
    ISSN = {1867-8548},
    DOI = {10.5194/amt-13-5779-2020},
-   url = {https://amt.copernicus.org/articles/13/5779/2020/},
+   url = {https://amt.copernicus.org/articles/13/5779/2020/amt-13-5779-2020.pdf},
    year = {2020},
+   type = {Journal Article}
+}
+
+@article{Ruf1996,
+   author = {Ruf, Christopher S. and Aydin, Kultegin and Mathur, Savyasachee and Bobak, Justin P.},
+   title = {35-GHz Dual-Polarization Propagation Link for Rain-Rate Estimation},
+   journal = {Journal of Atmospheric and Oceanic Technology},
+   volume = {13},
+   number = {2},
+   pages = {419-425},
+   ISSN = {0739-0572},
+   DOI = {10.1175/1520-0426(1996)013<0419:Gdpplf>2.0.Co;2},
+   year = {1996},
    type = {Journal Article}
 }
 
@@ -367,9 +387,22 @@ Microwave links},
    number = {3},
    pages = {858},
    ISSN = {1424-8220},
-   url = {https://www.mdpi.com/1424-8220/21/3/858},
+   url = {https://www.mdpi.com/1424-8220/21/3/858
+https://mdpi-res.com/d_attachment/sensors/sensors-21-00858/article_deploy/sensors-21-00858.pdf},
    year = {2021},
    type = {Journal Article}
+}
+
+@inproceedings{TanYear,
+   author = {Tan, Chuanqi and Sun, Fuchun and Kong, Tao and Zhang, Wenchang and Yang, Chao and Liu, Chunfang},
+   title = {A Survey on Deep Transfer Learning},
+   series = {Artificial Neural Networks and Machine Learning – ICANN 2018},
+   publisher = {Springer International Publishing},
+   pages = {270-279},
+   abstract = {As a new classification platform, deep learning has recently received increasing attention from researchers and has been successfully applied to many domains. In some domains, like bioinformatics and robotics, it is very difficult to construct a large-scale well-annotated dataset due to the expense of data acquisition and costly annotation, which limits its development. Transfer learning relaxes the hypothesis that the training data must be independent and identically distributed (i.i.d.) with the test data, which motivates us to use transfer learning to solve the problem of insufficient training data. This survey focuses on reviewing the current researches of transfer learning by using deep neural network and its applications. We defined deep transfer learning, category and review the recent research works based on the techniques used in deep transfer learning.},
+   ISBN = {978-3-030-01424-7},
+   year = {2018},
+   type = {Conference Proceedings}
 }
 
 @article{Turko2021,
@@ -381,7 +414,8 @@ Microwave links},
    pages = {1819-1834},
    ISSN = {1525-755X},
    DOI = {10.1175/jhm-d-20-0163.1},
-   url = {https://journals.ametsoc.org/view/journals/hydr/22/7/JHM-D-20-0163.1.xml},
+   url = {https://journals.ametsoc.org/view/journals/hydr/22/7/JHM-D-20-0163.1.xml
+https://journals.ametsoc.org/view/journals/hydr/aop/JHM-D-20-0163.1/JHM-D-20-0163.1.xml},
    year = {2021},
    type = {Journal Article}
 }
@@ -396,8 +430,23 @@ Microwave links},
    abstract = {Microwave backhaul links from cellular communication networks provide a valuable “opportunistic” source of high-resolution space–time rainfall information, complementing traditional in situ measurement devices (rain gauges, disdrometers) and remote sensors (weather radars, satellites). Over the past decade, a growing community of researchers has, in close collaboration with cellular communication companies, developed retrieval algorithms to convert the raw microwave link signals, stored operationally by their network management systems, to hydrometeorologically useful rainfall estimates. Operational meteorological and hydrological services as well as private consulting firms are showing an increased interest in using this complementary source of rainfall information to improve the products and services they provide to end users from different sectors, from water management and weather prediction to agriculture and traffic control. The greatest potential of these opportunistic environmental sensors lies in those geographical areas over the land surface of the Earth where the densities of traditional rainfall measurement devices are low: mountainous and urban areas and the developing world. This article provides a nonexpert summary of the history, theory, challenges, and opportunities toward continental-scale rainfall monitoring using microwave links from cellular communication networks. This article is categorized under: Science of Water > Methods Science of Water > Hydrological Processes},
    ISSN = {2049-1948},
    DOI = {https://doi.org/10.1002/wat2.1289},
-   url = {https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wat2.1289},
+   url = {https://wires.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/wat2.1289?download=true},
    year = {2018},
+   type = {Journal Article}
+}
+
+@article{Weiss2016,
+   author = {Weiss, Karl and Khoshgoftaar, Taghi M. and Wang, DingDing},
+   title = {A survey of transfer learning},
+   journal = {Journal of Big Data},
+   volume = {3},
+   number = {1},
+   pages = {9},
+   abstract = {Machine learning and data mining techniques have been used in numerous real-world applications. An assumption of traditional machine learning methodologies is the training data and testing data are taken from the same domain, such that the input feature space and data distribution characteristics are the same. However, in some real-world machine learning scenarios, this assumption does not hold. There are cases where training data is expensive or difficult to collect. Therefore, there is a need to create high-performance learners trained with more easily obtained data from different domains. This methodology is referred to as transfer learning. This survey paper formally defines transfer learning, presents information on current solutions, and reviews applications applied to transfer learning. Lastly, there is information listed on software downloads for various transfer learning solutions and a discussion of possible future research work. The transfer learning solutions surveyed are independent of data size and can be applied to big data environments.},
+   ISSN = {2196-1115},
+   DOI = {10.1186/s40537-016-0043-6},
+   url = {https://doi.org/10.1186/s40537-016-0043-6},
+   year = {2016},
    type = {Journal Article}
 }
 
@@ -410,7 +459,20 @@ Microwave links},
    note = {AMTD},
    ISSN = {1867-8610},
    DOI = {10.5194/amt-2021-34},
-   url = {https://amt.copernicus.org/preprints/amt-2021-34/},
+   url = {https://amt.copernicus.org/preprints/amt-2021-34/amt-2021-34.pdf},
+   year = {2021},
+   type = {Journal Article}
+}
+
+@article{Zhuang2021,
+   author = {Zhuang, F. and Qi, Z. and Duan, K. and Xi, D. and Zhu, Y. and Zhu, H. and Xiong, H. and He, Q.},
+   title = {A Comprehensive Survey on Transfer Learning},
+   journal = {Proceedings of the IEEE},
+   volume = {109},
+   number = {1},
+   pages = {43-76},
+   ISSN = {1558-2256},
+   DOI = {10.1109/JPROC.2020.3004555},
    year = {2021},
    type = {Journal Article}
 }
