--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -38,7 +38,7 @@
 
 \begin{document}
 	
-	\title{\vspace{-1cm}\Huge{Commercial Microwave Links in Sri Lanka as a precipitation source using Deep Transfer Learning}}
+	\title{\vspace{-1cm}\Huge{Commercial Microwave Link signals in Sri Lanka as precipitation measurements using Deep Transfer Learning}}
 	\author{\Large{Ludo Diender}}
 	\date{\normalsize{MSc thesis proposal\\
 			Hydrology and Quantitative Water Management Group,
@@ -51,17 +51,17 @@
 	\textbf{In short, without references yet.}
 	In the past 25 years, Commercial Microwave Links (CML) have been recognized as a valuable opportunistic method to measure rainfall \cite{Leijnse2007} \cite{Ruf1996}. The links' signals get attenuated by rainfall by means of scattering and absorption. This attenuation is measured and stored by telecompanies and can be used to retrieve rainfall rates. Especially in data scarce areas, where little precipitation is measured, CML's have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}. Their density in populated areas makes them especially useful for urban hydrology where high spatial and temporal resolution of precipitation data is required \cite{Overeem2011}. In general, having ample and correct precipitation data is important for flood warnings, agriculture, river systems, shipping routes and many more \cite{Chwala2019}. 
 	
-	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recent methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different kinds. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. In general, the time needed for the algorithm, the ease of implementing and the transferability of the methods are mentioned as main advantages of data-drive neural networks in comparison to the traditional PL method. 
+	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recent methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different kinds. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Previous studies have shown that such data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \cite{Polz2020,Pudashine2020}. 
 	
-	One of the disadvantages of using data-driven methods like neural networks, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a sligthly different task \cite{TanYear}. The technique exploits the availability of data in the source domain and is able to transfer the knowledge to the target domain. It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. Although used quite often in different Machine Learning applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML's in data-scarce areas. 
+	One of the disadvantages of using data-driven methods like neural networks, apart from the black-box characteristics inherent to the method, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a sligthly different task \cite{TanYear}. The technique exploits the availability of data in the source domain and is able to transfer the knowledge to the target domain. It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. Although used quite often in different Machine Learning applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML's in data-scarce areas. 
 	
-	Part on the use of Sri Lanka and Netherlands? Part on NN?
+	Recent research focused on the use of CML data to measure rainfall in tropical regions, more specifically Sri Lanka \cite{Overeem2021}. The relatively small amount of reference rain gauges made this research more challenging compard to well-equipped countries like the Netherlands \cite{Overeem2013}. Both of the two studies mentioned above are based on the algebraic PL method. There have not been any efforts yet to analyze the potential of CML's for rainfall retrieval using data-driven methods for neither the Netherlands nor Sri Lanka. 
 
 	
 	\section{Research objectives}
 	
 	\textit{State objectives clearly. What is the point of this research? The aim should follow directly from the problem description.}
-	The objectives of this research are to 1) train, test and validate a neural network on CML data in the Netherlands to obtain precipitation rates, 2) apply the concept of transfer learning to make the model able to obtain precipitation rates for Sri Lanka, and 3) create 2D interpolated rainfall maps using the neural network.
+	The objectives of this research are to 1) train, test and validate a neural network on CML data in the Netherlands to obtain precipitation rates, 2) apply the concept of transfer learning to make the model able to obtain precipitation rates for Sri Lanka, 3) create 2D interpolated rainfall maps using the neural network architecture and finally 4) compare the data-driven approach to previous approaches. By following these four objectives, this research will give an indication of the potential of transfer learning and data-driven methods for areas with little reference data like Sri Lanka. 
 	 
 	
 	\section{Research questions}
@@ -71,6 +71,7 @@
 		\item How does a neural network perform on Dutch data?
 		\item How does transfer learning improve the use of CML's in Sri Lanka as precipitation measurements?
 		\item What is the potential of the use of NN for 2D interpolation of rainfall maps
+		\item What is the performance of a neural network like compared to previous methods on retrieving rainfall rates from CML's?
 	\end{itemize}
 	
 	
@@ -83,7 +84,8 @@
 	Explain neural networks shortly.
 	Neural networks are part of deep learning. An input signal is transfered through different layers of the model. Every layer consists of different neurons that are able to extract features from the input signal. The subsequent layers extract combinations out of the previous layer, until finally the network ends up with a prediction with a certain probability. By applying a loss function, the network can learn how to improve, by changing the different parameters in all neurons. As a part of Machine Learning, the to-be-extracted features are unknown beforehand to the researcher. The network itself learns which features are interesting, seperable and help in classifying the specific signal. 
 	
-	To answer my research questions, I will use a neural network set up to infer rainfall rates from CML data. Picking the type of neural network will be part of the research as well, as there is a plethora of different architectures available, all of which serve specific purposes. Pick RNN as proposed by Habi, specifically LSTM.
+	In this research I will use a Long Short Term Memory (LSTM) architecture for my neural network, which is part of a Recurrent Neural Networks (RNN). RNN's a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. RNN's are designed for sequential data like the time signals that are used here. A disadvantage of RNN's is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM's resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM's to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN's are designed to work with sequential data, those are preferred in this research.
+	
 	The main architectural types that will be considered are one-dimensional convolutional neural networks (CNN), Long Short Term Memory (LSTM) and Gated Recurrent Unit (GRU). The final two are both different types of Recurrent Neural Networks. 
 	
 	
