--- a/Proposal_Ludo.bib
+++ b/Proposal_Ludo.bib
@@ -102,7 +102,21 @@
    type = {Journal Article}
 }
 
-@article{RiosGaona2017,
+@article{French1992,
+   author = {French, Mark N. and Krajewski, Witold F. and Cuykendall, Robert R.},
+   title = {Rainfall forecasting in space and time using a neural network},
+   journal = {Journal of Hydrology},
+   volume = {137},
+   number = {1},
+   pages = {1-31},
+   abstract = {A neural network is developed to forecast rainfall intensity fields in space and time; it is a three-layer learning network with input, hidden, and output layers. Training is conducted using back propagation where the input and output rainfall fields are presented to the neural network as a series of learning sets. After training is complete, the neural network is used to forecast rainfall intensity fields with a lead time of 1 h using only the current field as input. Rainfall fields are generated using a space-time mathematical rainfall simulation model, and forecasted fields are compared with the perfectly known model-produced fields. Results indicate that a neural network is capable of learning the complex relationship describing the space-time evolution of rainfall such as that inherent in a complex rainfall simulation model. One hour ahead forecasts are produced, and comparisons with true mean areal intensities and percent areal coverage indicate that in most cases the method performs well when applied to the events used in training. The neural network is used to forecast a series of events not included in the training data and is shown to perform well when a relatively large number of hidden nodes are utilized. Performance of the neural network is compared with two other methods of short-term forecasting, persistence and nowcasting.},
+   ISSN = {0022-1694},
+   DOI = {https://doi.org/10.1016/0022-1694(92)90046-X},
+   year = {1992},
+   type = {Journal Article}
+}
+
+@article{RiosGaona2017b,
    author = {Gaona, M. F. Rios and Overeem, A. and Brasjen, A. M. and Meirink, J. F. and Leijnse, H. and Uijlenhoet, R.},
    title = {Evaluation of Rainfall Products Derived From Satellites and Microwave Links for The Netherlands},
    journal = {IEEE Transactions on Geoscience and Remote Sensing},
@@ -111,11 +125,11 @@
    pages = {6849-6859},
    ISSN = {1558-0644},
    DOI = {10.1109/TGRS.2017.2735439},
-   year = {2017},
+   year = {2017b},
    type = {Journal Article}
 }
 
-@article{RiosGaona2017,
+@article{RiosGaona2017a,
    author = {Gaona, M.F.R. and Overeem, A. and Raupach, T.H. and Leijnse, H. and Uijlenhoet, R.},
    title = {Rainfall retrieval with commercial microwave links in Sao Paulo, Brazil},
    journal = {Atmos. Meas. Tech. },
@@ -123,7 +137,7 @@
    number = {7},
    pages = {11},
    DOI = {10.5194/amt-11-4465-2018},
-   year = {2017},
+   year = {2017a},
    type = {Journal Article}
 }
 
@@ -351,6 +365,37 @@ Microwave links},
    ISSN = {0739-0572},
    DOI = {10.1175/1520-0426(1996)013<0419:Gdpplf>2.0.Co;2},
    year = {1996},
+   type = {Journal Article}
+}
+
+@article{Sadeghi2019,
+   author = {Sadeghi, M. and Asanjan, A. A. and Faridzad, M. and Nguyen, P. and Hsu, K. and Sorooshian, S. and Braithwaite, D.},
+   title = {PERSIANN-CNN: Precipitation Estimation from Remotely Sensed Information Using Artificial Neural Networks-Convolutional Neural Networks},
+   journal = {Journal of Hydrometeorology},
+   volume = {20},
+   number = {12},
+   pages = {2273-2289},
+   note = {Jr1yt
+Times Cited:30
+Cited References Count:65},
+   abstract = {Accurate and timely precipitation estimates are critical for monitoring and forecasting natural disasters such as floods. Despite having high-resolution satellite information, precipitation estimation from remotely sensed data still suffers from methodological limitations. State-of-the-art deep learning algorithms, renowned for their skill in learning accurate patterns within large and complex datasets, appear well suited to the task of precipitation estimation, given the ample amount of high-resolution satellite data. In this study, the effectiveness of applying convolutional neural networks (CNNs) together with the infrared (IR) and water vapor (WV) channels from geostationary satellites for estimating precipitation rate is explored. The proposed model performances are evaluated during summer 2012 and 2013 over central CONUS at the spatial resolution of 0.08 degrees and at an hourly time scale. Precipitation Estimation from Remotely Sensed Information Using Artificial Neural Networks (PERSIANN)-Cloud Classification System (CCS), which is an operational satellite-based product, and PERSIANN-Stacked Denoising Autoencoder (PERSIANN-SDAE) are employed as baseline models. Results demonstrate that the proposed model (PERSIANN-CNN) provides more accurate rainfall estimates compared to the baseline models at various temporal and spatial scales. Specifically, PERSIANN-CNN outperforms PERSIANN-CCS (and PERSIANN-SDAE) by 54% (and 23%) in the critical success index (CSI), demonstrating the detection skills of the model. Furthermore, the root-mean-square error (RMSE) of the rainfall estimates with respect to the National Centers for Environmental Prediction (NCEP) Stage IV gauge-radar data, for PERSIANN-CNN was lower than that of PERSIANN-CCS (PERSIANN-SDAE) by 37% (14%), showing the estimation accuracy of the proposed model.},
+   keywords = {precipitation
+hydrometeorology
+neural networks
+global precipitation
+gauge observations
+passive microwave
+rain-gauge
+satellite
+resolution
+radar
+product
+cloud
+classification},
+   ISSN = {1525-755x},
+   DOI = {10.1175/Jhm-D-19-0110.1},
+   url = {<Go to ISI>://WOS:000499430000001},
+   year = {2019},
    type = {Journal Article}
 }
 
