--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -37,8 +37,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+	\chapter{\textbf{Preface}}
+	\\
+	Hi reader of this proposal!\\	
+	When reading this pre-proposal for the thesis ring, I would highly appreciate feedback on the Problem Description, the Research Questions (as I'm not sure how to differentiate those from the objectives) and the Method section. For the Method section, I'm particularly interested in hearing how the explanation of Neural Networks is received (subsections 5.1 and 5.2). Thanks in advance!
 	
-	\title{\vspace{-1cm}\Huge{Commercial Microwave Link signals in Sri Lanka as precipitation measurements using Deep Transfer Learning}}
+	\title{\vspace{-1cm}\Huge{Improving rainfall rate predictions via Commercial Microwave Link signals in Sri Lanka using Deep Transfer Learning}}
 	\author{\Large{Ludo Diender}}
 	\date{\normalsize{MSc thesis proposal\\
 			Hydrology and Quantitative Water Management Group,
@@ -48,46 +52,61 @@
 	
 	\section{Problem description}
 	
-	\textbf{In short, without references yet.}
-	In the past 25 years, Commercial Microwave Links (CML) have been recognized as a valuable opportunistic method to measure rainfall \cite{Leijnse2007} \cite{Ruf1996}. The links' signals get attenuated by rainfall by means of scattering and absorption. This attenuation is measured and stored by telecompanies and can be used to retrieve rainfall rates. Especially in data scarce areas, where little precipitation is measured, CML's have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}. Their density in populated areas makes them especially useful for urban hydrology where high spatial and temporal resolution of precipitation data is required \cite{Overeem2011}. In general, having ample and correct precipitation data is important for flood warnings, agriculture, river systems, shipping routes and many more \cite{Chwala2019}. 
+	In the past 25 years, Commercial Microwave Links (CML) have been recognized as a valuable opportunistic method to measure rainfall \cite{Leijnse2007} \cite{Ruf1996}. The links' signals get attenuated by rainfall by means of scattering and absorption. This attenuation is measured and stored by telecom companies for monitoring purposes and can be used to retrieve rainfall rates. Even more so in data scarce areas, where little precipitation is measured, CML's have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}. Their density in populated areas makes them especially useful for urban hydrology where high spatial and temporal resolution of precipitation data is required \cite{Overeem2011}. In general, having ample and correct precipitation data is important for flood warnings, agriculture, river systems, shipping routes and many more \cite{Chwala2019}. 
 	
-	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recent methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different kinds. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Previous studies have shown that such data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \cite{Polz2020,Pudashine2020}. 
-	
-	One of the disadvantages of using data-driven methods like neural networks, apart from the black-box characteristics inherent to the method, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a sligthly different task \cite{TanYear}. The technique exploits the availability of data in the source domain and is able to transfer the knowledge to the target domain. It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. Although used quite often in different Machine Learning applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML's in data-scarce areas. 
-	
-	Recent research focused on the use of CML data to measure rainfall in tropical regions, more specifically Sri Lanka \cite{Overeem2021}. The relatively small amount of reference rain gauges made this research more challenging compard to well-equipped countries like the Netherlands \cite{Overeem2013}. Both of the two studies mentioned above are based on the algebraic PL method. There have not been any efforts yet to analyze the potential of CML's for rainfall retrieval using data-driven methods for neither the Netherlands nor Sri Lanka. 
+	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate \cite{Overeem2011,Leijnse2007}. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recently methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different architectures. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Previous studies have shown that such data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \cite{Polz2020,Pudashine2020}. Neural networks are not a novelty in predicting rainfall \cite{French1992}, but the application to CML data is recently been rising in popularity.
+		
+	One of the disadvantages of using data-driven methods like neural networks, apart from the black-box characteristics inherent to the method, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a sligthly different task \cite{TanYear}. The technique exploits the availability of data in the source domain and is able to transfer the knowledge to the target domain. It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. Although used quite often in different applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML's in data-scarce areas. 
+		
+	Recent research focused on the use of CML data to measure rainfall in tropical regions, more specifically Sri Lanka \cite{Overeem2021} and Brazil \cite{RiosGaona2017a}. The relatively small amount of reference rain gauges in Sri Lanka especially made this research more challenging compared to well-equipped countries like the Netherlands \cite{Overeem2013}. Both of the two studies mentioned above (Sri Lanka and the Netherlands) are based on the algebraic PL method. There have not been any efforts yet to analyze the potential of CML's for rainfall retrieval using data-driven methods for neither the Netherlands nor Sri Lanka. 
 
 	
 	\section{Research objectives}
 	
-	\textit{State objectives clearly. What is the point of this research? The aim should follow directly from the problem description.}
-	The objectives of this research are to 1) train, test and validate a neural network on CML data in the Netherlands to obtain precipitation rates, 2) apply the concept of transfer learning to make the model able to obtain precipitation rates for Sri Lanka, 3) create 2D interpolated rainfall maps using the neural network architecture and finally 4) compare the data-driven approach to previous approaches. By following these four objectives, this research will give an indication of the potential of transfer learning and data-driven methods for areas with little reference data like Sri Lanka. 
+	The objectives of this research are to:
+	\begin{itemize}
+		\item train, test and validate a neural network on CML data in the Netherlands to obtain precipitation rates
+		\item apply the concept of transfer learning to make the model able to obtain precipitation rates for Sri Lanka
+		\item create 2D interpolated rainfall maps using the neural network architecture
+		\item compare the data-driven approach to previous approaches.
+	\end{itemize} 
+	With these four objectives, this research will give an indication of the potential of transfer learning and data-driven methods for areas with little reference data like Sri Lanka. 
 	 
 	
 	\section{Research questions}
-	
-	\textit{Which questions do you want to answer in order to reach the objectives? Divide into sub-questions for clarity.}
+	The research questions all relate to the objectives mentioned above. 
 	\begin{itemize}
 		\item How does a neural network perform on Dutch data?
 		\item How does transfer learning improve the use of CML's in Sri Lanka as precipitation measurements?
 		\item What is the potential of the use of NN for 2D interpolation of rainfall maps
-		\item What is the performance of a neural network like compared to previous methods on retrieving rainfall rates from CML's?
+		\item Does a neural network outperform previous methods like the power-law algorithm in retrieving rainfall rates from CML's?
 	\end{itemize}
 	
 	
 	\section{Field site and data}
-	
-	Are you going to use other people's data or collect data yourself? What are the considered locations, instruments, resolutions? You can also include the data in the methods.
-	Making use of Aart's dataset of the Netherlands and the provided data for Sri Lanka. Combination makes the research come together. \textbf{To what extent do I need to explain the data here? Frequency, number, type of measurements (interval or continuous, min/max or 1 min), time period (probably yes), metadata like average height and frequency.}
+	\textbf{I will write this section later, skip this for now when reading!}
+	Making use of Aart's dataset of the Netherlands and the provided data for Sri Lanka. Combination makes the research come together. Explain the type of signal data that I got (quantity, quality, metadata)
 	
 	\section{Methods}
-	Explain neural networks shortly.
-	Neural networks are part of deep learning. An input signal is transfered through different layers of the model. Every layer consists of different neurons that are able to extract features from the input signal. The subsequent layers extract combinations out of the previous layer, until finally the network ends up with a prediction with a certain probability. By applying a loss function, the network can learn how to improve, by changing the different parameters in all neurons. As a part of Machine Learning, the to-be-extracted features are unknown beforehand to the researcher. The network itself learns which features are interesting, seperable and help in classifying the specific signal. 
+	\subsection{Neural networks}
+	To conduct this research, I will make use of a neural network. Neural networks are part of deep learning. An input signal is transferred through different layers of the model. Every layer consists of different neurons (or nodes) that are able to extract features from the input signal. Every node consists of a weighted sum of the complete input signal. The weights that are given to the different values in this input signal, together with a bias that is added to this weighted sum, make up the parameter set of the neuron. 
+	The subsequent layers extract combinations out of the previous layer, until finally the network ends up with a prediction with a certain probability. By applying a loss function, the network can learn how to improve, by changing the different parameters in all neurons. The to-be-extracted features are unknown beforehand to the researcher. The network itself learns which features are interesting, separable and are helpful in classifying the specific signal. This is the cornerstone of machine learning/deep learning. 
 	
-	In this research I will use a Long Short Term Memory (LSTM) architecture for my neural network, which is part of a Recurrent Neural Networks (RNN). RNN's a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. RNN's are designed for sequential data like the time signals that are used here. A disadvantage of RNN's is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM's resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM's to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN's are designed to work with sequential data, those are preferred in this research.
+	In this research I will use a Long Short Term Memory (LSTM) architecture for my neural network, which is part of a Recurrent Neural Networks (RNN). RNN's a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. The network has one or two layers, depending on the complexity of the features and the signal. The signal is then processed multiple times by the same two layers. RNN's are designed for sequential data like the time signals that are used in this research. A disadvantage of RNN's is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM's resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM's to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN's are designed to work with sequential data, those are preferred in this research.
 	
-	The main architectural types that will be considered are one-dimensional convolutional neural networks (CNN), Long Short Term Memory (LSTM) and Gated Recurrent Unit (GRU). The final two are both different types of Recurrent Neural Networks. 
+	\subsection{Training, testing and transferring}
+	The  Dutch dataset as described in section 4 will be split up in two sets. One is dedicated to training the model and the other one will be used for testing. The training data is passed through the LSTM, the loss is calculated for each training sample and the network 'learns' (is updated) by using backward propagation. Backward propagation is a machine learning technique where the final layers are updated first and the updates move backwards through the model. 
 	
+	After training for a certain number of epochs (evolutions, number yet to be determined) the model is tested using the test data. The performance on the testing data is the most important and determines the performance of the model overall. 
+	
+	Once the LSTM performs well, transfer learning will be applied, to overhaul the information and knowledge gained by the model to quickly adapt to Sri Lankan data. By removing the outer layer of the model, the feature extraction part remains and can be used for a different dataset with different characteristics as well. The transferred model will, similarly to the first model, be trained on a subset of the Sri Lankan dataset. Afterwards, it will be tested on the remaining data to evaluate the potential of the transferred model. 
+	
+	\subsection{2-D interpolated rainfall maps}
+	\textbf{This section still needs some extra attention, please skip this for now}
+	CNN's have been proposed to deal with spatial patterns in rainfall data \cite{Sadeghi2019}. Could use radar images to learn the patterns of the Netherlands and subsequently use the CML data to recognize these patterns and create a rainfall map for the whole country using these CNN's. Might not result in anything different than the maps that are already made using the IDW or Nearest Neighbour techniques. 
+	
+	\subsection{Comparison to PL algorithm}
+	\textbf{This section still needs some extra attention, please skip this for now}	
 	
 	\section{Timetable}
 	
