Update on introduction and data part
More elaborate part on the introduction, included the feedback from thesisring. Added a part on the data availability from both NL and Sri Lanka

--- a/Proposal_Ludo.bib
+++ b/Proposal_Ludo.bib
@@ -241,6 +241,29 @@ Wet antennas},
    type = {Journal Article}
 }
 
+@misc{2018,
+   author = {Naveen Sai, Madiraju and Sadat, Seid M. and Fisher, Dimitry and Karimabadi, Homa},
+   title = {Deep Temporal Clustering : Fully Unsupervised Learning of Time-Domain Features},
+   publisher = {Cornell University Library, arXiv.org},
+   month = {2018 Feb 04},
+   note = {Copyright - © 2018. This work is published under http://arxiv.org/licenses/nonexclusive-distrib/1.0/ (the “License”). Notwithstanding the ProQuest Terms and Conditions, you may use this content in accordance with the terms of the License.
+Last updated - 2019-04-12},
+   abstract = {Unsupervised learning of time series data, also known as temporal clustering, is a challenging problem in machine learning. Here we propose a novel algorithm, Deep Temporal Clustering (DTC), to naturally integrate dimensionality reduction and temporal clustering into a single end-to-end learning framework, fully unsupervised. The algorithm utilizes an autoencoder for temporal dimensionality reduction and a novel temporal clustering layer for cluster assignment. Then it jointly optimizes the clustering objective and the dimensionality reduction objec tive. Based on requirement and application, the temporal clustering layer can be customized with any temporal similarity metric. Several similarity metrics and state-of-the-art algorithms are considered and compared. To gain insight into temporal features that the network has learned for its clustering, we apply a visualization method that generates a region of interest heatmap for the time series. The viability of the algorithm is demonstrated using time series data from diverse domains, ranging from earthquakes to spacecraft sensor data. In each case, we show that the proposed algorithm outperforms traditional methods. The superior performance is attributed to the fully integrated temporal dimensionality reduction and clustering criterion.},
+   keywords = {Business And Economics--Banking And Finance
+Algorithms
+Time series
+Similarity
+Reduction
+Viability
+Machine learning
+Clustering},
+   url = {https://www.proquest.com/working-papers/deep-temporal-clustering-fully-unsupervised/docview/2071310996/se-2?accountid=27871
+http://library.wur.nl/link/resolve?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:journal&genre=preprint&sid=ProQ:ProQ%3Apubliccontent&atitle=Deep+Temporal+Clustering+%3A+Fully+Unsupervised+Learning+of+Time-Domain+Features&title=arXiv.org&issn=&date=2018-02-04&volume=&issue=&spage=&au=Naveen+Sai+Madiraju%3BSadat%2C+Seid+M%3BFisher%2C+Dimitry%3BKarimabadi%2C+Homa&isbn=&jtitle=arXiv.org&btitle=&rft_id=info:eric/&rft_id=info:doi/
+http://arxiv.org/abs/1802.01059},
+   year = {2018},
+   type = {Generic}
+}
+
 @article{Overeem2021,
    author = {Overeem, Aart and Leijnse, Hidde and Leth, Thomas and Bogerd, Linda and Priebe, Jan and Tricarico, Daniele and Droste, Arjan and Uijlenhoet, Remko},
    title = {Tropical rainfall monitoring with commercial microwave links in Sri Lanka},
@@ -341,6 +364,19 @@ Microwave links},
    type = {Journal Article}
 }
 
+@article{Rigol2001,
+   author = {Rigol, Juan P. and Jarvis, Claire H. and Stuart, Neil},
+   title = {Artificial neural networks as a tool for spatial interpolation},
+   journal = {International Journal of Geographical Information Science},
+   volume = {15},
+   number = {4},
+   pages = {323-343},
+   ISSN = {1365-8816},
+   DOI = {10.1080/13658810110038951},
+   year = {2001},
+   type = {Journal Article}
+}
+
 @article{Roversi2020,
    author = {Roversi, G. and Alberoni, P. P. and Fornasiero, A. and Porcù, F.},
    title = {Commercial microwave links as a tool for operational rainfall monitoring in Northern Italy},
@@ -397,6 +433,15 @@ classification},
    url = {<Go to ISI>://WOS:000499430000001},
    year = {2019},
    type = {Journal Article}
+}
+
+@misc{Sarkar2018,
+   author = {Sarkar, D.J.},
+   title = {A Comprehensive Hands-on Guide to Transfer Learning with Real-World Applications in Deep Learning},
+   month = {November 14, 2018},
+   url = {https://towardsdatascience.com/a-comprehensive-hands-on-guide-to-transfer-learning-with-real-world-applications-in-deep-learning-212bf3b2f27a},
+   year = {2018},
+   type = {Web Page}
 }
 
 @article{Song2021,
