--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -5,12 +5,13 @@
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor} % extra colors 
 \usepackage{graphicx}                                                       % figures
 %\usepackage{natbib}                                                          % bibliography
-\usepackage[english]{babel}                                              % correct hyphenation (afbreekstreepjes)
-\usepackage{booktabs}                                                     % for midrule in tables
-\usepackage{rotating}                                                        % for sdeways table
+\usepackage[english]{babel}                            % correct hyphenation (afbreekstreepjes)
+\usepackage{booktabs}                                                % for midrule in tables
+\usepackage{rotating}                                                  % for sdeways table
 \usepackage{apacite}
-\usepackage[modulo, switch]{lineno}
-
+\usepackage[modulo, switch]{lineno}   % use for linenumbers at the sides
+\usepackage{url}
+\PassOptionsToPackage{hyphens}{url} % \usepackage{hyperref}
 % PAGE MARGINS
 \usepackage[top=2.5cm, bottom=2.5cm, left=2cm, right=2cm]{geometry}
 
@@ -30,6 +31,7 @@
 % set words that are not abbreviated correctly  (expand list when necessary)
 \hyphenation{catch-ment areas a-na-lyse}
 
+\graphicspath{ {./images/} }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -53,61 +55,65 @@
 	
 	\section{Problem description}
 	
-	In the past 25 years, Commercial Microwave Links (CML) have been recognized as a valuable opportunistic method to measure rainfall \cite{Leijnse2007} \cite{Ruf1996}. The links' signals get attenuated by rainfall by means of scattering and absorption. This attenuation is measured and stored by telecom companies for monitoring purposes and can be used to retrieve rainfall rates. Even more so in data scarce areas, where little precipitation is measured, CML's have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}. Their density in populated areas makes them especially useful for urban hydrology where high spatial and temporal resolution of precipitation data is required \cite{Overeem2011}. In general, having ample and correct precipitation data is important for flood warnings, agriculture, river systems, shipping routes and many more \cite{Chwala2019}. 
+	Having ample and correct precipitation data is important for a plethora of applications, including flood warnings, agriculture, river safety, shipping routes and many more \cite{Chwala2019}. In urban areas, an even higher spatial and temporal resolution of rainfall is needed, due to the complex urban hydrology system \cite{Overeem2011}. Due to their high density in populated areas, Commercial Microwave Links (CML) can help in retrieving precipitation data. In the past 25 years, CML have been recognized as a valuable opportunistic method to measure rainfall \cite{Leijnse2007} \cite{Ruf1996}. CML are back-haul links used by telecommunication companies to transfer information from one telecom station to the next using microwave signals. The links' signals get attenuated by rainfall by means of scattering and absorption. This attenuation is measured and stored by the telecommunication companies for monitoring purposes and can be used to retrieve path-averaged rainfall rates. In data scarce areas, where little precipitation is measured, CML have proven to be an excellent addition to precipitation data \cite{Overeem2021,Doumounia2014,Diba2021}.   
 	
-	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate \cite{Overeem2011,Leijnse2007}. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recently methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different architectures. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Previous studies have shown that such data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \cite{Polz2020,Pudashine2020}. Neural networks are not a novelty in predicting rainfall \cite{French1992}, but the application to CML data is recently been rising in popularity.
+	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power-Law (PL) to relate the attenuation of the signal and the rainfall rate \cite{Overeem2011,Leijnse2007}. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \cite{deVos2019,Graf2020,Fencl2017}. Recently methods have shifted away from this PL algorithm and used a more data-driven approach in the form of neural networks of different architectures. Neural networks, or Deep Learning, are a subpart of Machine Learning that is inspired by the neural structure of the brain. A neural network consists of different layers of nodes (neurons) that are connected to each other. Similar to Machine Learning, a neural network is able to learn on its own, without intervention from a researcher. Studies have been performed in Sweden, Israel \cite{Habi2019}, Germany \cite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Previous studies have shown that data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \cite{Polz2020,Pudashine2020}. Neural networks are not a novelty in predicting rainfall \cite{French1992}, but the application to CML data has recently been rising in popularity.
 		
-	One of the disadvantages of using data-driven methods like neural networks, apart from the black-box characteristics inherent to the method, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a sligthly different task \cite{TanYear}. The technique exploits the availability of data in the source domain and is able to transfer the knowledge to the target domain. It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. Although used quite often in different applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML's in data-scarce areas. 
+	One of the disadvantages of using data-driven methods like neural networks, apart from the black-box characteristics inherent to the method, is the dependency on a large training data set. In areas with less or little available training data, transfer learning provides the opportunity to adapt an already existing model with a certain structure to do a slightly different task \cite{TanYear}. The concept of transfer learning is based on the way humans learn. When humans learn a new task, we do not start from scratch. We use previous knowledge and skills to quickly adapt to the new task. When learning to ride a motorcycle, it helps if you already know how to ride a bike. Concepts like balance and steering can be transferred from the latter task to the former, thus speeding up the learning process. 
+	The technique exploits the availability of data in the source domain and is able to transfer that knowledge to the target domain.
+	\begin{figure}[t]
+		\includegraphics[width=8cm]{Transfer_learning_concept}
+		\caption{Concept of transfer learning. Adapted from \protect\cite{Sarkar2018} }
+		\label{fig:transferconcept}
+	\end{figure} 
+	It does so by relaxing the underlying assumption that training and test data for a Machine Learning model should be independent and identically distributed \cite{Weiss2016}. A conceptual picture of transfer learning can be seen in figure \ref{fig:transferconcept} Although used quite often in different applications \cite{Zhuang2021}, the concept of transfer learning has not yet been used to improve the precipitation estimation using CML in data-scarce areas. 
 		
-	Recent research focused on the use of CML data to measure rainfall in tropical regions, more specifically Sri Lanka \cite{Overeem2021} and Brazil \cite{RiosGaona2017a}. The relatively small amount of reference rain gauges in Sri Lanka especially made this research more challenging compared to well-equipped countries like the Netherlands \cite{Overeem2013}. Both of the two studies mentioned above (Sri Lanka and the Netherlands) are based on the algebraic PL method. There have not been any efforts yet to analyze the potential of CML's for rainfall retrieval using data-driven methods for neither the Netherlands nor Sri Lanka. 
+	Recent research focused on the use of CML data to measure rainfall in tropical regions, more specifically Sri Lanka \cite{Overeem2021} and Brazil \cite{RiosGaona2017a}. The relatively small amount of reference rain gauges in Sri Lanka especially made this research more challenging compared to well-equipped countries like the Netherlands \cite{Overeem2013}. Both of the two studies mentioned above (Sri Lanka and the Netherlands) are based on the PL method. There have not been any efforts yet to analyze the potential of CML for rainfall retrieval using data-driven methods for neither the Netherlands nor Sri Lanka. 
 
 	
-	\section{Research objectives}
+	\section{Research objectives and questions}
 	
-	The objectives of this research are to:
-	\begin{itemize}
-		\item train, test and validate a neural network on CML data in the Netherlands to obtain precipitation rates
-		\item apply the concept of transfer learning to make the model able to obtain precipitation rates for Sri Lanka
-		\item create 2D interpolated rainfall maps using the neural network architecture
-		\item compare the data-driven approach to previous approaches.
-	\end{itemize} 
-	With these four objectives, this research will give an indication of the potential of transfer learning and data-driven methods for areas with little reference data like Sri Lanka. 
-	 
-	
-	\section{Research questions}
-	The research questions all relate to the objectives mentioned above. 
-	\begin{itemize}
-		\item How does a neural network perform on Dutch data?
-		\item How does transfer learning improve the use of CML's in Sri Lanka as precipitation measurements?
-		\item What is the potential of the use of NN for 2D interpolation of rainfall maps
-		\item Does a neural network outperform previous methods like the power-law algorithm in retrieving rainfall rates from CML's?
-	\end{itemize}
-	
-	
+	The questions asked in this research are the following:
+	1) How does a neural network perform on Dutch CML data in retrieving rainfall rates? By training, testing and validating a neural network on the Dutch CML data, this research aims to find out if such a data-driven approach yields better results compared to more traditional approaches.\\
+	2) How does transfer learning improve the use of CML in Sri Lanka for measuring precipitation? As transfer learning has the potential to improve the learning curve of a neural network significantly, this question is aimed to find out if applying the concept of transfer learning is useful and worth it. Is there a significant benefit to this method that would make it preferable over other more traditional methods?\\
+	3) What is the potential of the use of neural networks for 2D interpolation of rainfall maps? A neural network architecture can be used to detect unknown patterns in rainfall distributions and use those to improve the interpolation of rainfall maps. Is this significantly better than the currently used interpolation methods? In other words, is it worth the effort?\\
+		
 	\section{Field site and data}
-	\textbf{I will write this section later, skip this for now when reading!}
-	Making use of Aart's dataset of the Netherlands and the provided data for Sri Lanka. Combination makes the research come together. Explain the type of signal data that I got (quantity, quality, metadata)
+	This research will make use of datasets in two different countries, with a slightly different structure.
+	\subsection{The Netherlands}
+	The Dutch data used in this research is similar to previous research \cite{Overeem2016}.
+	The first research question will make use of the CML data from NEC and NOKIA microwave links, operated by T-Mobile. Both datasets span the period of 14 January 2011 to 30 July 2013, roughly 2,5 years. The data contains 3101 links, but as shown before \cite{Overeem2016}, not all of these links will be proven useful or available. The total number of actual links used will therefore be lower, depending on the quality. Received Signal Level (RSL)  is stored at 15-minute intervals, at which the minimum and maximum signal level over the time period are stored. The power resolution of the data is 1 dB (NOKIA) and 0.1 dB (NEC). 
+	Apart from the dynamic time signal data, static metadata is included as well. This includes coordinates of the start and end point of the link, distance between these points and frequency per link.
+	
+	As a reference, a gauge-adjusted radar rainfall dataset is used (freely available as "Radar precipitation climatology" via http://climate4impact.eu) with a resolution of 0.9 km\textsuperscript{2}. The radar is adjusted with the use of both the automated and  manual rain gauge network operated by the KNMI (Royal Dutch Meteorological Institute).
+	
+	
+	\subsection{Sri Lanka}
+	The Sri Lankan data is similar to previous research \cite{Overeem2021}.
+	The CML data in Sri Lanka spans 3,5 months (12 September 2012 to 31 December 2012) and similar to the Dutch data, is logged once every 15 minutes (minimum and maximum RSL). The dataset consists of on average 1140 link paths. Static data include start and end point of the link, link length and average frequency. Although the data is available throughout the whole country of Sri Lanka, the network density around the biggest city Colombo is significantly higher. PICTURE OF THE NETWORK IN SRI LANKA AND THE NETHERLANDS
+	
+	
 	
 	\section{Methods}
 	\subsection{Neural networks}
 	To conduct this research, I will make use of a neural network. Neural networks are part of deep learning. An input signal is transferred through different layers of the model. Every layer consists of different neurons (or nodes) that are able to extract features from the input signal. Every node consists of a weighted sum of the complete input signal. The weights that are given to the different values in this input signal, together with a bias that is added to this weighted sum, make up the parameter set of the neuron. 
 	The subsequent layers extract combinations out of the previous layer, until finally the network ends up with a prediction with a certain probability. By applying a loss function, the network can learn how to improve, by changing the different parameters in all neurons. The to-be-extracted features are unknown beforehand to the researcher. The network itself learns which features are interesting, separable and are helpful in classifying the specific signal. This is the cornerstone of machine learning/deep learning. 
 	
-	In this research I will use a Long Short Term Memory (LSTM) architecture for my neural network, which is part of a Recurrent Neural Networks (RNN). RNN's a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. The network has one or two layers, depending on the complexity of the features and the signal. The signal is then processed multiple times by the same two layers. RNN's are designed for sequential data like the time signals that are used in this research. A disadvantage of RNN's is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM's resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM's to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. The networks used in those studies will serve as a source of inspiration for this research. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN's are designed to work with sequential data, those are preferred in this research.
+	In this research I will use a Long Short Term Memory (LSTM) architecture for my neural network, which is part of a Recurrent Neural Networks (RNN). RNN a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. The network has one or two layers, depending on the complexity of the features and the signal. The signal is then processed multiple times by the same two layers. RNN are designed for sequential data like the time signals that are used in this research. A disadvantage of RNN is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. The networks used in those studies will serve as a source of inspiration for this research. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN (and specifically LSTM) are designed to work with sequential data, those are preferred in this research.
 	
 	\subsection{Training, testing and transferring}
-	The  Dutch dataset as described in section 4 will be split up in two sets. One is dedicated to training the model and the other one will be used for testing. The training data is passed through the LSTM, the loss is calculated for each training sample and the network 'learns' (is updated) by using backward propagation. Backward propagation is a machine learning technique where the final layers are updated first and the updates move backwards through the model. 
+	The  Dutch dataset as described in section 3 will be split up in two sets. One is dedicated to training the model and the other one will be used for testing. The training data is passed through the LSTM, the loss is calculated for each training sample and the network 'learns' (is updated) by using backward propagation. Backward propagation is a machine learning technique where the final layers are updated first and the updates move backwards through the model. 
 	
-	After training for a certain number of epochs (evolutions, number yet to be determined) the model is tested using the test data. The performance on the testing data is the most important and determines the performance of the model overall. 
+	After training for a certain number of epochs (evolutions) the model is tested using the test data. The performance on the testing data is the most important and determines the performance of the model overall. 
 	
 	Once the LSTM performs well, transfer learning will be applied, to overhaul the information and knowledge gained by the model to quickly adapt to Sri Lankan data. By removing the outer layer of the model, the feature extraction part remains and can be used for a different dataset with different characteristics as well. The transferred model will, similarly to the first model, be trained on a subset of the Sri Lankan dataset. Afterwards, it will be tested on the remaining data to evaluate the potential of the transferred model. 
 	
-	\subsection{2-D interpolated rainfall maps}
-	\textbf{This section still needs some extra attention, please skip this for now}
-	CNN's have been proposed to deal with spatial patterns in rainfall data \cite{Sadeghi2019}. Could use radar images to learn the patterns of the Netherlands and subsequently use the CML data to recognize these patterns and create a rainfall map for the whole country using these CNN's. Might not result in anything different than the maps that are already made using the IDW or Nearest Neighbour techniques. 
+	Finally, both the trained model on the Dutch CML and the transferred model on the Sri Lankan data will be compared to the current performance of CML algorithms \cite{Overeem2011, Overeem2021}, which are bundled in the openly available R-package RAINLINK. (SOURCEEEE). During this comparison, focuspoints will be the overall match with the reference dataset and the performance during periods with rather low or high rainfall rates. Low rainfall rates have been a challenge in previous CML research, as the noise in the CML signal is harder to distinguish from small rain-events \cite{Uijlenhoet2018}. The performance during periods of higher rainfall is expected to be similar, as the signal attenuation from large rain-events is quite clear. 
 	
-	\subsection{Comparison to PL algorithm}
-	\textbf{This section still needs some extra attention, please skip this for now}	
+	\subsection{2-D interpolated rainfall maps}
+	CNN's have been proposed to deal with spatial patterns in rainfall data \cite{Sadeghi2019}. Already 20 years ago, advances have been made in using neural networks for spatial interpolation of environmental variables \cite{Rigol2001}). In this research, a similar neural network structure will be proposed to interpolate the rainfall data obtained from CML. The interpolated map will be compared to a reference map created by using a gauge-adjusted radarproduct.
+	These neural networks need terrain information next to the data from the CML. The resulting interpolated maps are compared to more commonly used interpolation methods to see if the extra effort of using neural networks yields maps that more closely resemble the reference map. 
+	
 	
 	\section{Timetable}
 	
