--- a/Proposal/Proposal_Ludo.bib
+++ b/Proposal/Proposal_Ludo.bib
@@ -172,6 +172,23 @@
    type = {Thesis}
 }
 
+@article{Hu2016,
+   author = {Hu, Qinghua and Zhang, Rujia and Zhou, Yucan},
+   title = {Transfer learning for short-term wind speed prediction with deep neural networks},
+   journal = {Renewable Energy},
+   volume = {85},
+   pages = {83-95},
+   abstract = {As a type of clean and renewable energy source, wind power is widely used. However, owing to the uncertainty of wind speed, it is essential to build an accurate forecasting model for large-scale wind power penetration. Numerical weather prediction (NWP) and data-driven modeling are two typical paradigms. NWP is usually unavailable or spatially insufficient. Data-driven modeling is an effective candidate. As to some newly-built wind farms, sufficient historical data is not available for training an accurate model, while some older wind farms may have long-term wind speed records. A question arises regarding whether the prediction model trained by data coming from older farms is also effective for a newly-built farm. In this paper, we propose an interesting trial of transferring the information obtained from data-rich farms to a newly-built farm. It is well known that deep learning can extract a high-level representation of raw data. We introduce deep neural networks, trained by data from data-rich farms, to extract wind speed patterns, and then finely tune the mapping with data coming from newly-built farms. In this way, the trained network transfers information from one farm to another. The experimental results show that prediction errors are significantly reduced using the proposed technique.},
+   keywords = {Wind speed prediction
+Transfer learning
+Deep neural networks
+Stacked denoising autoencoder},
+   ISSN = {0960-1481},
+   DOI = {https://doi.org/10.1016/j.renene.2015.06.034},
+   year = {2016},
+   type = {Journal Article}
+}
+
 @article{Imhoff2020,
    author = {Imhoff, R. O. and Overeem, A. and Brauer, C. C. and Leijnse, H. and Weerts, A. H. and Uijlenhoet, R.},
    title = {Rainfall Nowcasting Using Commercial Microwave Links},
@@ -348,6 +365,24 @@ http://arxiv.org/abs/1802.01059},
    type = {Journal Article}
 }
 
+@article{Qureshi2017,
+   author = {Qureshi, Aqsa Saeed and Khan, Asifullah and Zameer, Aneela and Usman, Anila},
+   title = {Wind power prediction using deep neural network based meta regression and transfer learning},
+   journal = {Applied Soft Computing},
+   volume = {58},
+   pages = {742-755},
+   abstract = {An innovative short term wind power prediction system is proposed which exploits the learning ability of deep neural network based ensemble technique and the concept of transfer learning. In the proposed DNN-MRT scheme, deep auto-encoders act as base-regressors, whereas Deep Belief Network is used as a meta-regressor. Employing the concept of ensemble learning facilitates robust and collective decision on test data, whereas deep base and meta-regressors ultimately enhance the performance of the proposed DNN-MRT approach. The concept of transfer learning not only saves time required during training of a base-regressor on each individual wind farm dataset from scratch but also stipulates good weight initialization points for each of the wind farm for training. The effectiveness of the proposed, DNN-MRT technique is expressed by comparing statistical performance measures in terms of root mean squared error (RMSE), mean absolute error (MAE), and standard deviation error (SDE) with other existing techniques.},
+   keywords = {Wind power prediction
+Sparse denoising auto-encoders
+Meta-regressor
+Transfer learning
+Meteorological properties},
+   ISSN = {1568-4946},
+   DOI = {https://doi.org/10.1016/j.asoc.2017.05.031},
+   year = {2017},
+   type = {Journal Article}
+}
+
 @article{Rayitsfeld2012,
    author = {Rayitsfeld, Asaf and Samuels, Rana and Zinevich, Artem and Hadar, Uri and Alpert, Pinhas},
    title = {Comparison of two methodologies for long term rainfall monitoring using a commercial microwave communication system},
@@ -432,6 +467,19 @@ classification},
    DOI = {10.1175/Jhm-D-19-0110.1},
    url = {<Go to ISI>://WOS:000499430000001},
    year = {2019},
+   type = {Journal Article}
+}
+
+@article{Sagheer2021,
+   author = {Sagheer, Alaa and Hamdoun, Hala and Youness, Hassan},
+   title = {Deep LSTM-Based Transfer Learning Approach for Coherent Forecasts in Hierarchical Time Series},
+   journal = {Sensors},
+   volume = {21},
+   number = {13},
+   pages = {4379},
+   ISSN = {1424-8220},
+   url = {https://www.mdpi.com/1424-8220/21/13/4379},
+   year = {2021},
    type = {Journal Article}
 }
 
